--- a/productdetail.html
+++ b/productdetail.html
@@ -29,7 +29,7 @@
         <div class="detail">
             <div class="details">
                 <a href="cart.html"><button class="btn">Add To Cart</button></a>
-                <p class="prices">Rs. 17,999</p>
+                <p class="prices">$ 28.99</p>
                 <div class="rating">
                     <ion-icon name="star"></ion-icon>
                     <ion-icon name="star"></ion-icon>
