--- a/mentshirt-1.html
+++ b/mentshirt-1.html
@@ -44,45 +44,45 @@
 
         <h1>You might also like these</h1>
         <div class="products">
-            <div class="product">
-                <a href="productdetail.html"><img class="shoe" src="images/shoe-1.jpg" alt="shoe-1"></a>
-                <p class="price">Rs. 5,999</p>
-                <p class="colours">Avaliable in 3 beautifull colours</p>
-                <a href="cart.html"><button class="btn-cart">Add To Cart</button></a>
+                <div class="product">
+                    <a href="productdetail.html"><img class="shoe" src="images/shoe-1.jpg" alt="shoe-1"></a>
+                    <p class="price">$ 20.80</p>
+                    <p class="colours">Avaliable in 3 beautifull colours</p>
+                    <a href="cart.html"><button class="btn-cart">Add To Cart</button></a>
+                </div>
+                <div class="product">
+                    <a href="productdetail.html"><img class="shoe" src="images/shoe-2.jpg" alt="shoe-2"></a>
+                    <p class="price">$ 17.0</p>
+                    <p class="colours">Avaliable in 2 beautifull colours</p>
+                    <a href="cart.html"><button class="btn-cart">Add To Cart</button></a>
+                </div>
+                <div class="product">
+                    <a href="productdetail.html"><img class="shoe" src="images/shoe-3.jpg" alt="shoe-3"></a>
+                    <p class="price">$ 32.80</p>
+                    <p class="colours">Avaliable in 2 beautifull colours</p>
+                    <a href="cart.html"><button class="btn-cart">Add To Cart</button></a>
+                </div>
             </div>
-            <div class="product">
-                <a href="productdetail.html"><img class="shoe" src="images/shoe-2.jpg" alt="shoe-2"></a>
-                <p class="price">Rs. 3,999</p>
-                <p class="colours">Avaliable in 2 beautifull colours</p>
-                <a href="cart.html"><button class="btn-cart">Add To Cart</button></a>
-            </div>
-            <div class="product">
-                <a href="productdetail.html"><img class="shoe" src="images/shoe-3.jpg" alt="shoe-3"></a>
-                <p class="price">Rs. 8,999</p>
-                <p class="colours">Avaliable in 2 beautifull colours</p>
-                <a href="cart.html"><button class="btn-cart">Add To Cart</button></a>
-            </div>
-        </div>
         <div class="products">
-            <div class="product">
-                <a href="productdetail.html"><img class="shoe" src="images/womenshoe-4.jpg" alt="shoe-1"></a>
-                <p class="price">Rs. 1,999</p>
-                <p class="colours">Avaliable in 3 beautifull colours</p>
-                <a href="cart.html"><button class="btn-cart">Add To Cart</button></a>
+                <div class="product">
+                    <a href="productdetail.html"><img class="shoe" src="images/womenshoe-4.jpg" alt="shoe-1"></a>
+                    <p class="price">$ 30.99</p>
+                    <p class="colours">Avaliable in 3 beautifull colours</p>
+                    <a href="cart.html"><button class="btn-cart">Add To Cart</button></a>
+                </div>
+                <div class="product">
+                    <a href="productdetail.html"><img class="shoe" src="images/womenshoe-5.jpg" alt="shoe-2"></a>
+                    <p class="price">$ 49.99</p>
+                    <p class="colours">Avaliable in 2 beautifull colours</p>
+                    <a href="cart.html"><button class="btn-cart">Add To Cart</button></a>
+                </div>
+                <div class="product">
+                    <a href="productdetail.html"><img class="shoe" src="images/womenshoe-6.jpg" alt="shoe-3"></a>
+                    <p class="price">$ 33.33</p>
+                    <p class="colours">Avaliable in 1 beautifull colour</p>
+                    <a href="cart.html"><button class="btn-cart">Add To Cart</button></a>
+                </div>
             </div>
-            <div class="product">
-                <a href="productdetail.html"><img class="shoe" src="images/womenshoe-5.jpg" alt="shoe-2"></a>
-                <p class="price">Rs. 10,999</p>
-                <p class="colours">Avaliable in 2 beautifull colours</p>
-                <a href="cart.html"><button class="btn-cart">Add To Cart</button></a>
-            </div>
-            <div class="product">
-                <a href="productdetail.html"><img class="shoe" src="images/womenshoe-6.jpg" alt="shoe-3"></a>
-                <p class="price">Rs. 17,999</p>
-                <p class="colours">Avaliable in 1 beautifull colour</p>
-                <a href="cart.html"><button class="btn-cart">Add To Cart</button></a>
-            </div>
-        </div>
     </div>
     </main>
 
