--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </div>
 
         <div id="shopnow" class="shopnow">
-            <div><h1 class="heading-shop">Shop now</h1></div>
+            <div class="sub_shopnow"><h1 class="heading-shop">Shop now</h1></div>
             <div class="products">
                 <div class="men">
                     <img src="images/men.jpg" alt="men">
