--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <section class="hero-section">
             <div>
                 <h1 class="hero-heading">Build your own<br> path with every step.</h1>
-                <a href="#shopnow"><button class="btn hero-btn">Shop Now</button></a>
+                <div class="sub_hero-heading"<a href="#shopnow"><button class="btn hero-btn">Shop Now</button></a>
             </div>
         </section>
 
@@ -64,7 +64,9 @@
         </div>
 
         <section id="form" class="form1">
-            <div><h1 class="heading-form">We're happy to hear from you</h1></div>
+            <div class"sub_heading-form">
+                <h1 class="heading-form">We're happy to hear from you</h1>
+            </div>
             <form method="post" action="#" class="contact-form">
                 <div class="form">
                     <div class="name">
@@ -139,7 +141,7 @@
                 </ul>
             </div>
         </div>
-        <div>
+        <div class="copyright">
             <p>
                 Copyright &copy; 2021 by Company Name. All rights reserved.
             </p>
